--- a/index.html
+++ b/index.html
@@ -21,16 +21,6 @@
     <title>Product list with cart</title>
     <link rel="stylesheet" href="index.css" />
 
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
 
   <body>
@@ -75,18 +65,7 @@
       <div class="cart-box-filled">
         <h3>Your Cart ( <span class="ordered-value">0</span> )</h3>
 
-        <div class="order-list-box">
-          <!-- <div class="food-box">
-          <div>
-            <h4>waffle with Berries</h4>
-            <div class="food-price">
-              <h6><span>1</span>x</h6>
-              <span class="span-1">@$5.50</span>
-              <span class="span-2">@$5.50</span>
-            </div>
-          </div>
-          <img src="assets/images/icon-remove-item.svg" alt=""> -->
-        </div>
+        <div class="order-list-box"></div>
 
         <!--  Cart Total -->
         <div class="cart-total">
@@ -120,11 +99,18 @@
           <p>Order Total</p>
           <h3 class="orderTotalH3"></h3>
         </div>
-        <div class="button-div">
-          <button class="new-order-btn">Start New Order</button>
-        </div>
+        <button class="new-order-btn">Start New Order</button>
       </div>
     </section>
+
+   <div class="attribution">
+      Challenge by
+      <a
+        href="https://www.frontendmentor.io/challenges/product-list-with-cart-5MmqLVAp_d"
+        target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/Aarif195/product-list-with-Cart">Aarif</a>.
+    </div>
 
     <script src="script.js"></script>
   </body>
